# echo-math

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  release-plz.yml
src/: angle.rs  lib.rs  mat4.rs  prng.rs  quat.rs  scalar.rs  types.rs  vec3.rs
src/scalar/: dfix64.rs  f32_det.rs  f32_impl.rs  kinds.rs  mod.rs  traits.rs
src/vec/: mod.rs  point3.rs  vec3.rs
tests/: compile_tests.rs  math_tests.rs  vec3_test.rs
tests/compile/compile_fail/: angle_deg_call_sin.rs  angle_deg_call_sin.stderr  det_vs_nondet_f32_into_det.rs  det_vs_nondet_f32_into_det.stderr  direction_instead_of_point.rs  direction_instead_of_point.stderr  direction_sub_direction.rs  direction_sub_direction.stderr  mix_vec3_scalar_types.rs  mix_vec3_scalar_types.stderr  normalize_point.rs  normalize_point.stderr  point_instead_of_direction.rs  point_instead_of_direction.stderr  point_plus_point.rs  point_plus_point.stderr  ray_wrong_types.rs  ray_wrong_types.stderr  scale_point.rs  scale_point.stderr  vec3_nondet_in_det_context.rs  vec3_nondet_in_det_context.stderr
